// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core testing Should generate valid sitemap.xml 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><?xml-stylesheet href=\\"/test/styles.css\\" type=\\"text/css\\" ?>
<?xml-stylesheet href=\\"test/test/styles.xls\\" type=\\"text/xsl\\" ?>

      <urlset xsi:schemaLocation=\\"http://www.sitemaps.org/schemas/sitemap/0.9 
      http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd\\" 
      xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" 
      xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" 
      xmlns:xhtml=\\"http://www.w3.org/1999/xhtml\\">
      
	<url>
		<loc>https://example.com.ru/index.old</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/index.old\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/index.old\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/index.old\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/index.old\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/login</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/login\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/login\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/login\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/login\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/product-discount</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/product-discount\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/product-discount\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/product-discount\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/product-discount\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/set-user</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/set-user\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/set-user\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/set-user\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/set-user\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/page1</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/page1\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/page2</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/page2\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/product/page1</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/product/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/product/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/product/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/product/page1\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/product/page2</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/product/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/product/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/product/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/product/page2\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/user/page1</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/user/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/user/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/user/page1\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/user/page1\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/user/page2</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/user/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/user/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/user/page2\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/user/page2\\" />
		<lastmod>2020-01-01</lastmod>
	</url>
</urlset>"
`;

exports[`Core testing Should make map of sites 1`] = `
Object {
  "": Object {
    "page": "",
  },
  "/admin/page1": Object {
    "page": "/admin/page1",
  },
  "/admin/page2": Object {
    "page": "/admin/page2",
  },
  "/admin/page3": Object {
    "page": "/admin/page3",
  },
  "/admin/superadmins/page1": Object {
    "page": "/admin/superadmins/page1",
  },
  "/admin/superadmins/page2": Object {
    "page": "/admin/superadmins/page2",
  },
  "/index.old": Object {
    "page": "/index.old",
  },
  "/login": Object {
    "page": "/login",
  },
  "/product-discount": Object {
    "page": "/product-discount",
  },
  "/set-user": Object {
    "page": "/set-user",
  },
  "/store/page1": Object {
    "page": "/store/page1",
  },
  "/store/page2": Object {
    "page": "/store/page2",
  },
  "/store/product/page1": Object {
    "page": "/store/product/page1",
  },
  "/store/product/page2": Object {
    "page": "/store/product/page2",
  },
  "/user/page1": Object {
    "page": "/user/page1",
  },
  "/user/page2": Object {
    "page": "/user/page2",
  },
}
`;

exports[`Core testing Should match the snapshot if allowFileExtensions 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><?xml-stylesheet href=\\"/test/styles.css\\" type=\\"text/css\\" ?>
<?xml-stylesheet href=\\"test/test/styles.xls\\" type=\\"text/xsl\\" ?>

      <urlset xsi:schemaLocation=\\"http://www.sitemaps.org/schemas/sitemap/0.9 
      http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd\\" 
      xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" 
      xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" 
      xmlns:xhtml=\\"http://www.w3.org/1999/xhtml\\">
      
	<url>
		<loc>https://example.com.ru/index.old.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/index.old.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/index.old.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/index.old.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/index.old.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/index.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/index.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/index.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/index.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/index.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/login.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/login.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/login.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/login.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/login.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/product-discount.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/product-discount.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/product-discount.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/product-discount.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/product-discount.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/set-user.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/set-user.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/set-user.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/set-user.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/set-user.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/page1.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/page1.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/page2.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/page2.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/product/page1.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/product/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/product/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/product/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/product/page1.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/store/product/page2.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/store/product/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/store/product/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/store/product/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/store/product/page2.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/user/page1.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/user/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/user/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/user/page1.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/user/page1.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>

	<url>
		<loc>https://example.com.ru/user/page2.tsx</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/user/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/user/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/user/page2.tsx\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/user/page2.tsx\\" />
		<lastmod>2020-01-01</lastmod>
	</url>
</urlset>"
`;

exports[`TestCore with nextConfig should exclude ignoredPaths returned by exportPathMap 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><?xml-stylesheet href=\\"/test/styles.css\\" type=\\"text/css\\" ?>
<?xml-stylesheet href=\\"test/test/styles.xls\\" type=\\"text/xsl\\" ?>

      <urlset xsi:schemaLocation=\\"http://www.sitemaps.org/schemas/sitemap/0.9 
      http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd\\" 
      xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" 
      xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" 
      xmlns:xhtml=\\"http://www.w3.org/1999/xhtml\\">
      </urlset>"
`;

exports[`TestCore with nextConfig should generate valid sitemap 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><?xml-stylesheet href=\\"/test/styles.css\\" type=\\"text/css\\" ?>
<?xml-stylesheet href=\\"test/test/styles.xls\\" type=\\"text/xsl\\" ?>

      <urlset xsi:schemaLocation=\\"http://www.sitemaps.org/schemas/sitemap/0.9 
      http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd\\" 
      xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" 
      xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" 
      xmlns:xhtml=\\"http://www.w3.org/1999/xhtml\\">
      
	<url>
		<loc>https://example.com.ru/exportPathMapURL/</loc>
		<xhtml:link rel=\\"alternate\\" hreflang=\\"en\\" href=\\"https://example.en/exportPathMapURL/\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"es\\" href=\\"https://example.es/exportPathMapURL/\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"ja\\" href=\\"https://example.jp/exportPathMapURL/\\" /><xhtml:link rel=\\"alternate\\" hreflang=\\"fr\\" href=\\"https://example.fr/exportPathMapURL/\\" />
		<lastmod>2020-01-01</lastmod>
	</url>
</urlset>"
`;

exports[`TestCore with nextConfig should respect exportTrailingSlash from Next config 1`] = `
Array [
  Object {
    "changefreq": "",
    "outputPath": "/admin/page1/",
    "pagePath": "/admin/page1",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/admin/page2/",
    "pagePath": "/admin/page2",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/admin/page3/",
    "pagePath": "/admin/page3",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/admin/superadmins/page1/",
    "pagePath": "/admin/superadmins/page1",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/admin/superadmins/page2/",
    "pagePath": "/admin/superadmins/page2",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/index.old/",
    "pagePath": "/index.old",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/",
    "pagePath": "",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/login/",
    "pagePath": "/login",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/product-discount/",
    "pagePath": "/product-discount",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/set-user/",
    "pagePath": "/set-user",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/store/page1/",
    "pagePath": "/store/page1",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/store/page2/",
    "pagePath": "/store/page2",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/store/product/page1/",
    "pagePath": "/store/product/page1",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/store/product/page2/",
    "pagePath": "/store/product/page2",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/user/page1/",
    "pagePath": "/user/page1",
    "priority": "",
  },
  Object {
    "changefreq": "",
    "outputPath": "/user/page2/",
    "pagePath": "/user/page2",
    "priority": "",
  },
]
`;
